# restful-sunsaver

./: .dockerignore  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  docker-runner.sh
.github/: dependabot.yml
.travis/: build-docker-image.sh
hooks/: post_checkout
src/: api.rs  main.rs  sun_saver.rs  sunsaver_connection.rs
src/sunsaver/: arrayfault.rs  chargestate.rs  loggedresponse.rs  loggedresponseday.rs  macros.rs  mod.rs  sunsaverresponse.rs
web/: fake_data.json  fake_data_status.json  index.html
