[package]
name = "restful-sunsaver"
version = "0.1.0"
authors = ["Guy Taylor <thebigguy.co.uk@gmail.com>"]

[dependencies]
libmodbus-rs = { git = "https://github.com/TheBiggerGuy/libmodbus-rs.git", branch = "guy" }
clap = "2.19.3"
log = "0.3"
pretty_env_logger = "0.1.*"
iron = "0.5.*"
router = "0.5.*"
staticfile = "*"
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
ctrlc = "*"
retry = "0.4.*"
